--- a/README
+++ b/README
@@ -33,7 +33,7 @@ Macro-"Redmine_CreateTicket"：
  For create Ticket
 Macro-"Redmine_CreateTimeEntry"：
  For Create Time Entry
-Macro-"Redmine_DeleteRed"：
+Macro-"Delete_Reg"：
  Delete Registory Data
 
 3.Copy Right
