--- a/README
+++ b/README
@@ -42,7 +42,7 @@ Macro-"Redmine_CreateTimeEntry"：
 Macro-"Delete_Reg"：
  Delete Registory Data
 
-3.Copy Right
+3.Copy Rights
 grobkreuz <grobkreuz@gmail.com>
 
 4.License
