--- a/README
+++ b/README
@@ -44,6 +44,8 @@ Macro-"Redmine_CreateTimeEntry"：
  For Create Time Entry
 Macro-"Delete_Reg"：
  Delete Registory Data
+Macro-"Redmine_Search"
+ For Search ticket
 
 3.Copy Rights
 grobkreuz <grobkreuz@gmail.com>
@@ -57,4 +59,64 @@ See web site
 
 5.Support
 Nothing
+ 
+読め
+ReadMe
 
+Redmine_tools_for_outlook
+outlook で選択したメールや予定を元にＲｅｄｍｉｎｅチケットを作成する
+時間記録を行う
+賢い設定管理
+チケット検索機能。でも Search_API は使いません。それは3.3からしかサポートされません。
+ 
+1.Install
+1.1.Install Module
+以下のファイルをインポートします
+RMTC_Creater.frm
+RMTC_Creater.frx
+RMTC_Module.bas
+RMTC_Setting.frm
+RMTC_Setting.frx
+RMTM_Creater.frm
+RMTM_Creater.frx
+RMTS_Search.frm
+RMTS_Search.frx
+
+1.2.Install Necessary module
+以下のファイルは他人の成果物です。
+ 
+1.2.1.Calender Form 
+CalenderForm.frm
+CalenderForm.frx
+あなたは得られます https://github.com/satoshi71/vbacalendar
+
+1.2.2.JSONLib
+JSONLib.cls
+あなたは得られます https://github.com/markwilliams970/RallyRestToolkitForVBA/blob/master/VBAProjectFiles/JSONLib.cls
+ 
+1.3. Enable Runtime
+Development - Tools - References - "Windows Scripting Runtime" を有効にします
+
+2.Hou to Use
+あなたのＲｅｄｍｉｎｅ で、 JSONとRestAPIを有効にします
+ 
+For Outlook
+Macro-"Redmine_CreateTicket"：
+ チケットをつくります
+Macro-"Redmine_CreateTimeEntry"：
+ 時間を記録します
+Macro-"Delete_Reg"：
+ 設定を消します
+ 
+3.Copy Rights
+grobkreuz <grobkreuz@gmail.com>
+
+4.License
+4.1. RMTC_Creater.frm , RMTC_Creater.frx , RMTC_Module.bas , RMTC_Setting.frm , RMTC_Setting.frx , RMTM_Creater.frm , RMTM_Creater.frx , RMTS_Search.frm , RMTS_Search.frx
+GNU GPL Ver.3 License
+
+4.2. Calender Form , JSONLib.cls 
+See web site
+
+5.Support
+Nothing
