--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 ReadMe
 
-Redmine_tools_for_outlook ver 1.4.5
+Redmine_tools_for_outlook ver 1.4.6
 create ticket for outlook mails and schedules
 ceate time entry
-search ticket , its not use search API. because this API is supported on redmine version 3.3 and upper. 
+search ticket , its not use search API. because this API is supported on redmine version 3.3 and upper.  linked mail Entry ID
 
 1.Install
 1.1.Install Module
