--- a/README
+++ b/README
@@ -64,10 +64,11 @@ None
 読んでください 
 
 Redmine_tools_for_outlook
-outlook で選択したメールや予定を元にＲｅｄｍｉｎｅチケットを作成する
-時間記録を行う
-賢い設定管理
-チケット検索機能。でも Search_API は使いません。それは3.3からしかサポートされません。
+outlook で選択したメールや予定を元にRedmineにチケットを作成する（アイテムのIDを自動付与）
+時間記録を行う（カレンダーの作業時間を自動で取り込む）
+時間管理用 お気に入りリスト管理機能、assined タスク表示機能
+設定管理
+チケット検索機能（メールやカレンダーを選択した場合は、アイテムのIDが自動でセット、キーワード検索も可）
  
 1.Install
 1.1.Install Module
